--- a/Layouts/room-18.xml
+++ b/Layouts/room-18.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-18</name>
     <sid>1203834528579869</sid>
-    <event-sheet>room-12</event-sheet>
+    <event-sheet>room-18</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
@@ -47,6 +47,23 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+            </instances>
+            <effects />
+        </layer>
+        <layer name="Game" sid="5312361160384634">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances>
                 <instance type="room18" uid="32">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
@@ -57,10 +74,17 @@
                         <tile-x-spacing>0</tile-x-spacing>
                         <tile-y-spacing>0</tile-y-spacing>
                     </properties>
+                    <behavior-instances>
+                        <behavior-instance type="Solid">
+                            <properties>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>0</x>
+                        <x>-2</x>
                         <y>0</y>
                         <z>0</z>
                         <width>840</width>
@@ -75,7 +99,7 @@
                         <height>7</height>
                         <max-width>26</max-width>
                         <max-height>15</max-height>
-                        <data>-1,-1,-1,-1,-1,-1,72,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,73,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,74,-1,-1,-1,-1,-1,-1,-1,-1,-1,15,27,39,-1,-1,75,-1,-1,-1,-1,-1,-1,-1,-1,-1,16,28,-1,-1,-1,76,-1,-1,-1,-1,-1,-1,-1,-1,5,17,29,-1,-1,-1,77,-1,-1,-1,-1,-1,-1,-1,-1,6,18,30,-1,-1,-1,78,-1,-1,-1,-1,-1,-1,-1,-1,7,19,31,-1,-1,-1,79,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,-1,-1,-1,-1,80,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,5,45,57,69,81,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,-1,-1,-1,-1,82,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,-1,-1,-1,-1,83,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1</data>
+                        <data>-1,-1,-1,-1,-1,-1,72,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,73,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,74,-1,-1,-1,-1,-1,-1,-1,-1,-1,15,27,39,-1,-1,75,-1,-1,-1,-1,-1,-1,-1,-1,-1,16,28,-1,-1,-1,76,-1,-1,-1,-1,-1,-1,-1,-1,5,17,29,-1,-1,-1,77,-1,-1,-1,-1,-1,-1,-1,-1,6,18,30,-1,-1,-1,78,-1,-1,-1,-1,-1,-1,-1,-1,7,19,31,-1,-1,-1,79,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,-1,-1,-1,-1,80,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,6,18,30,69,81,-1,-1,-1,-1,-1,-1,-1,-1,8,-1,-1,-1,-1,-1,82,-1,-1,-1,-1,-1,-1,-1,-1,6,18,30,18,30,18,30,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1</data>
                     </tilemap-data>
                 </instance>
                 <instance type="JumpThruTile" uid="33">
@@ -105,23 +129,29 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="BlueCrystal" uid="27">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>735</x>
+                        <y>394</y>
+                        <z>0</z>
+                        <width>36</width>
+                        <height>26</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
-            <effects />
-        </layer>
-        <layer name="Game" sid="5312361160384634">
-            <initially-visible>1</initially-visible>
-            <background-color>255,255,255</background-color>
-            <transparent>1</transparent>
-            <parallax>
-                <x>1</x>
-                <y>1</y>
-            </parallax>
-            <zoom-rate>1</zoom-rate>
-            <opacity>1</opacity>
-            <force-own-texture>0</force-own-texture>
-            <blend-mode>0</blend-mode>
-            <effect-fallback>0</effect-fallback>
-            <instances />
             <effects />
         </layer>
         <layer name="UI" sid="345931091869617">
