Finished with my end
My end is done!!

--- a/Layouts/room-1 (r).xml
+++ b/Layouts/room-1 (r).xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <c2layout>
-    <name>room-1 (beer)</name>
+    <name>room-1 (r)</name>
     <sid>5160991439870033</sid>
     <event-sheet>room-1 (beer)</event-sheet>
     <size>
